[gd_scene load_steps=7 format=2]

[ext_resource path="res://SistemaGrid/assets/circuito/carta verde.png" type="Texture" id=1]
[ext_resource path="res://SistemaGrid/scripts/menuComponentes.gd" type="Script" id=2]
[ext_resource path="res://SistemaGrid/assets/circuito/carta vermelha.png" type="Texture" id=3]
[ext_resource path="res://SistemaGrid/assets/circuito/carta amarela 20v.png" type="Texture" id=4]
[ext_resource path="res://SistemaGrid/assets/circuito/carta amarela 10v.png" type="Texture" id=5]
[ext_resource path="res://SistemaGrid/assets/circuito/carta roxa.png" type="Texture" id=6]

[node name="menuComponentes" type="Node2D"]
script = ExtResource( 2 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/vseparation = 20

[node name="CenterContainer" type="CenterContainer" parent="GridContainer"]
margin_right = 133.0
margin_bottom = 127.0
mouse_filter = 2

[node name="fonte10v" type="TextureButton" parent="GridContainer/CenterContainer"]
margin_left = 4.0
margin_right = 128.0
margin_bottom = 127.0
action_mode = 0
texture_normal = ExtResource( 1 )

[node name="CenterContainer2" type="CenterContainer" parent="GridContainer"]
margin_top = 147.0
margin_right = 133.0
margin_bottom = 274.0
mouse_filter = 2

[node name="lampada10v" type="TextureButton" parent="GridContainer/CenterContainer2"]
margin_left = 2.0
margin_right = 131.0
margin_bottom = 127.0
action_mode = 0
texture_normal = ExtResource( 5 )

[node name="CenterContainer3" type="CenterContainer" parent="GridContainer"]
margin_top = 294.0
margin_right = 133.0
margin_bottom = 421.0
mouse_filter = 2

[node name="lampada20v" type="TextureButton" parent="GridContainer/CenterContainer3"]
margin_left = 2.0
margin_right = 131.0
margin_bottom = 127.0
action_mode = 0
texture_normal = ExtResource( 4 )

[node name="CenterContainer4" type="CenterContainer" parent="GridContainer"]
margin_top = 441.0
margin_right = 133.0
margin_bottom = 573.0
mouse_filter = 2

[node name="chave2t" type="TextureButton" parent="GridContainer/CenterContainer4"]
margin_right = 133.0
margin_bottom = 132.0
action_mode = 0
texture_normal = ExtResource( 6 )

[node name="CenterContainer5" type="CenterContainer" parent="GridContainer"]
margin_top = 593.0
margin_right = 133.0
margin_bottom = 725.0
mouse_filter = 2

[node name="chave3t" type="TextureButton" parent="GridContainer/CenterContainer5"]
margin_right = 133.0
margin_bottom = 132.0
action_mode = 0
texture_normal = ExtResource( 3 )

[connection signal="pressed" from="GridContainer/CenterContainer/fonte10v" to="." method="_on_fonte10v_pressed"]
[connection signal="pressed" from="GridContainer/CenterContainer2/lampada10v" to="." method="_on_lampada10v_pressed"]
[connection signal="pressed" from="GridContainer/CenterContainer3/lampada20v" to="." method="_on_lampada20v_pressed"]
[connection signal="pressed" from="GridContainer/CenterContainer4/chave2t" to="." method="_on_chave2t_pressed"]
[connection signal="pressed" from="GridContainer/CenterContainer5/chave3t" to="." method="_on_chave3t_pressed"]
